# lattice

./: .gitignore  Cargo.toml  README.md  TODO.md  view_palette.py
benches/: apply.rs  sort.rs
crates/lattice-dag/: Cargo.toml
crates/lattice-dag/src/: lib.rs  node.rs  voxel.rs
shaders/: debug.wgsl  output.wgsl  primary.wgsl  traverse.wgsl  types.wgsl
src/: bitpacked.rs  chunk.rs  edit.rs  lib.rs  material_table.rs  palette.rs  render.rs  shape.rs  shapes.rs  tree.rs  types.rs  voxel.rs  world.rs
src/chunk/: build.rs  edit.rs  material.rs  mod.rs
src/convert/: geometry.rs  io.rs  mod.rs  scene.rs  voxelizer.rs
src/convert/gltf/: error.rs  mod.rs
src/convert/lattice/: mod.rs
src/convert/vox/: mod.rs  serialization.rs  voxelization.rs
src/dag/: node.rs  voxel.rs
src/format/: mod.rs  read.rs  vox.rs  write.rs
src/import/: color.rs  cull.rs  gltf.rs  mod.rs  palette.rs  partition.rs  pbr.rs  voxelize.rs
src/import/gltf/: material.rs  mesh.rs  mod.rs  voxelizer.rs
src/lattice/: bitpacked.rs  geometry_dag.rs  grid.rs  lut.rs  material_dag.rs  mod.rs  node.rs  svo.rs  voxel.rs
src/load/: header.rs  mod.rs  stream.rs  upload.rs
src/pack/: build.rs  dag.rs  finalize.rs  lut.rs  materials.rs  mod.rs  repack.rs  serialize.rs  sort.rs  tree.rs
src/render/: camera.rs  debug.rs  gi.rs  lod.rs  mod.rs  pipeline.rs  present.rs  tracer.rs  traverse.rs  upload.rs
src/shape/: mod.rs  rect.rs  sphere.rs  terrain.rs
src/tree/: build.rs  chunk.rs  compact.rs  edit.rs  grid.rs  level.rs  lod.rs  mod.rs  node.rs  pool.rs  stats.rs  traverse.rs  walk.rs  world.rs
src/tree/chunk/: canonicalize.rs  edit.rs  material.rs  mod.rs  shape.rs
src/tree/edit/: apply.rs  sort.rs
src/types/: bitpacked.rs  lut.rs  voxel.rs
src/world/: generate.rs  lod.rs  mod.rs  pool.rs
