[package]
name = "lattice"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[features]
default = []
import = ["dep:gltf", "dep:dot_vox"]

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
dot_vox = { version = "5.2", optional = true }
glam = "0.32"
gltf = { version = "1.4", default-features = false, features = ["import", "utils", "KHR_materials_pbrSpecularGlossiness"], optional = true }
image = "0.25"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1"
wgpu = "22"
winit = "0.30"

[[bin]]
name = "pack"
required-features = ["import"]

[[bin]]
name = "palettize"
required-features = ["import"]

[[bin]]
name = "palette_gen"
required-features = ["import"]

[profile.release]
opt-level = 3
lto = "thin"
