[package]
name = "lattice"
version = "0.1.0"
edition = "2024"

[lib]
path = "src/lib.rs"

[dependencies]
anyhow = "1"
bytemuck = { version = "1", features = ["derive"] }
clap = { version = "4.6.0", features = ["derive"] }
clippy = "0.0.302"
dot_vox = "5.2"
glam = "0.32"
gltf = { version = "1.4", default-features = false, features = [ "import", "utils", "KHR_materials_pbrSpecularGlossiness" ] }
image = "0.25"
profiling = "1.0.17"
rand = { version = "0.8", features = ["small_rng"] }
rayon = "1"
thiserror = "2.0.18"
wgpu = "22"
winit = "0.30"

[[bin]]
name = "convert"

[[bin]]
name = "palettize"

[[bin]]
name = "palette_gen"

[profile.release]
opt-level = 3
lto = "thin"
